Bug fixes on details page - no invisible pictures on every second slide of the slide box. Card of a restaurant is always resolved.

--- a/scss/details.scss
+++ b/scss/details.scss
@@ -92,3 +92,7 @@
     overflow: hidden;
   }
 }
+
+.zoom-box:nth-child(2n) {
+  background: transparent !important;
+}
