--- a/scss/main.scss
+++ b/scss/main.scss
@@ -413,10 +413,6 @@ input, button, select, textarea {
   background: rgba(0,0,0,0.9);
 }
 
-ion-slide:nth-child(2n) {
-  background: transparent !important;
-}
- 
 .slider {
   width: 100%;
   height: 100%;
